Crash when creating reroute loop in geometry nodes #87659

Closed
opened 2021-04-20 17:58:37 +02:00 by Zorro Weaver · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.63

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-19 20:39, hash: 0566ebdebe
Worked: (newest version of Blender that worked as expected)

Short description of error
When a reroute loop is created in geometry nodes, I.e. connecting a reroute to another reroute that connects to it through any number of reroutes, blender crashes. In shader nodes, this is not a problem, as the new wire is turned red with no effect. This seems to happen with any number of reroutes, even 2.
Exact steps for others to reproduce the error
(from the default startup)

  1. Open blender
  2. Open a geometry nodes editor
  3. Create 2 reroutes
  4. Connect the first one to the second one
  5. Connect the second one to the first one
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.63 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-19 20:39, hash: `0566ebdebe` Worked: (newest version of Blender that worked as expected) **Short description of error** When a reroute loop is created in geometry nodes, I.e. connecting a reroute to another reroute that connects to it through any number of reroutes, blender crashes. In shader nodes, this is not a problem, as the new wire is turned red with no effect. This seems to happen with any number of reroutes, even 2. **Exact steps for others to reproduce the error** (from the default startup) 1. Open blender 2. Open a geometry nodes editor 3. Create 2 reroutes 4. Connect the first one to the second one 5. Connect the second one to the first one
Author

Added subscriber: @Zorro_weaver

Added subscriber: @Zorro_weaver
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-04-21 14:50:47 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser removed their assignment 2021-04-21 15:38:29 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Caused by 0ff3f96a1b

Seems to hang infinitely in blender::nodes::InputSocketRef::foreach_logical_origin.
Seems quicker if @JacquesLucke has a look.
Will set to High prio since it is a regression, crashes and we have the culprit commit.

Caused by 0ff3f96a1b Seems to hang infinitely in `blender::nodes::InputSocketRef::foreach_logical_origin`. Seems quicker if @JacquesLucke has a look. Will set to High prio since it is a regression, crashes and we have the culprit commit.
Jacques Lucke self-assigned this 2021-04-21 16:00:12 +02:00

This issue was referenced by b1fcc8e6ba

This issue was referenced by b1fcc8e6ba25d5429cc868615c3b514e360ef912
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87659
No description provided.