Fix T87659: crash when creating reroute loop in geometry nodes

This was a regression introduced in rB0ff3f96a1b0193d69dae5ca69e7c93d6cdf34558.